exports[`Kinopoisk fetches cinema info for given arguments 1`] = `
Object {
  "address": "string",
  "homepage": "string",
  "id": "number",
  "location": Object {
    "lat": "number",
    "lng": "number",
  },
  "name": "string",
  "phoneNumbers": Array [
    Object {
      "phone": "string",
    },
  ],
  "showtimes": Array [
    Object {
      "filmId": "number",
      "items": Array [
        Object {
          "date": "string",
          "formats": "Array<string>",
          "time": "string",
          "timestamp": "Date",
        },
      ],
    },
  ],
}
`;

exports[`Kinopoisk fetches cinemas for a given city id 1`] = `
Object {
  "cinemas": Array [
    Object {
      "address": "string",
      "id": "number",
      "location": Object {
        "lat": "number",
        "lng": "number",
      },
      "name": "string",
    },
  ],
}
`;

exports[`Kinopoisk fetches movie credits for a given id 1`] = `
Object {
  "cast": Array [
    Object {
      "name": "string",
      "photoUrl": "string",
    },
  ],
  "crew": Object {
    "cinematographers": Array [
      Object {
        "name": "string",
        "photoUrl": "string",
      },
    ],
    "composers": Array [
      Object {
        "name": "string",
        "photoUrl": "string",
      },
    ],
    "directors": Array [
      Object {
        "name": "string",
        "photoUrl": "string",
      },
    ],
    "producers": Array [
      Object {
        "name": "string",
        "photoUrl": "string",
      },
    ],
    "writers": Array [
      Object {
        "name": "string",
        "photoUrl": "string",
      },
    ],
  },
}
`;

exports[`Kinopoisk fetches movie gallery for a given id 1`] = `
Object {
  "behindTheScenes": "Array<string>",
  "posters": "Array<string>",
  "stills": "Array<string>",
}
`;

exports[`Kinopoisk fetches movie info for a given id 1`] = `
Object {
  "ageRating": "number",
  "genres": "Array<string>",
  "imdbRating": "number",
  "imdbRatingVoteCount": "number",
  "kpId": "number",
  "kpRating": "number",
  "kpRatingVoteCount": "number",
  "mpaaRating": "string",
  "originalTitle": "string",
  "posterUrl": "string",
  "productionCountries": "Array<string>",
  "rtCriticsRating": "number",
  "rtCriticsRatingVoteCount": "number",
  "runtime": "number",
  "stills": "Array<string>",
  "synopsis": "string",
  "title": "string",
  "year": "number",
}
`;

exports[`Kinopoisk fetches similar movies for a given id 1`] = `
Object {
  "items": Array [
    Object {
      "genres": "Array<string>",
      "kpId": "number",
      "kpRating": "number",
      "kpRatingVoteCount": "number",
      "originalTitle": "string",
      "posterUrl": "string",
      "productionCountries": "Array<string>",
      "runtime": "number",
      "title": "string",
      "year": "number",
    },
  ],
}
`;

exports[`Kinopoisk fetches supported cities for a given country id 1`] = `
Object {
  "cities": Array [
    Object {
      "id": "number",
      "name": "string",
    },
  ],
}
`;

exports[`Kinopoisk fetches supported countries 1`] = `
Object {
  "countries": Array [
    Object {
      "id": "number",
      "name": "string",
    },
  ],
}
`;

exports[`Kinopoisk finds best movie id for a given query 1`] = `714888`;

exports[`Kinopoisk finds best tv show id for a given query 1`] = `464963`;
